Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <p>
                 Customize your dining experience by choosing from various food categories.
             </p>
-            <a href="https://www.zomato.com" target="_blank">
+            <a href="menu.html">
                 Read more
                 <span><i class="ri-arrow-right-line"></i></span>
             </a>
@@ -231,7 +231,7 @@
             <p>
                 Discover our cozy ambiance and dining experience crafted for you.
             </p>
-            <a href="https://www.timeout.com/food-drink/best-restaurants" target="_blank">
+            <a href="https://www.zomato.com/" target="_blank">
                 Read more
                 <span><i class="ri-arrow-right-line"></i></span>
             </a>
